--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8-slim-buster
 
-LABEL MAINTAINER="@weidonggg"
+LABEL MAINTAINER="@weidonggg@MaotaiKing"
 
 ENV GIT_BRANCH master
 ENV TIMEZONE Asia/Shanghai
@@ -34,7 +34,7 @@ RUN set -ex; \
                    libnss3; \
       \
       # clone jd seckill code.
-      git clone -b $GIT_BRANCH https://github.com/huanghyw/jd_seckill.git /app; \
+      git clone -b $GIT_BRANCH https://github.com/MRAUStuty/github_huanghyw_jd_seckill.git /app; \
       cd /app \
         && rm -rf .git; \
       \
